--- a/ProjetCarte/ProjetCarte/ProjetCarte.vcxproj
+++ b/ProjetCarte/ProjetCarte/ProjetCarte.vcxproj
@@ -147,12 +147,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Carte.h" />
+    <ClInclude Include="Card.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Carte.cpp" />
+    <ClCompile Include="Card.cpp" />
     <ClCompile Include="ProjetCarte.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
