--- a/ProjetCarte/ProjetCarte/ProjetCarte.vcxproj.filters
+++ b/ProjetCarte/ProjetCarte/ProjetCarte.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClInclude Include="targetver.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="Carte.h">
+    <ClInclude Include="Card.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
@@ -32,7 +32,7 @@
     <ClCompile Include="ProjetCarte.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="Carte.cpp">
+    <ClCompile Include="Card.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
