--- a/ProjetCarte/ProjetCarte/ProjetCarte.vcxproj
+++ b/ProjetCarte/ProjetCarte/ProjetCarte.vcxproj
@@ -149,12 +149,16 @@
   <ItemGroup>
     <ClInclude Include="Card.h" />
     <ClInclude Include="Deck.h" />
+    <ClInclude Include="Hand_Player.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="Deck.cpp" />
+    <ClCompile Include="Hand_Player.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="ProjetCarte.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
