--- a/ProjetCarte/ProjetCarte/ProjetCarte.vcxproj
+++ b/ProjetCarte/ProjetCarte/ProjetCarte.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="Card.h" />
     <ClInclude Include="Deck.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Row.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -158,6 +159,7 @@
     <ClCompile Include="Deck.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="ProjetCarte.cpp" />
+    <ClCompile Include="Row.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
