--- a/ProjetCarte/ProjetCarte/ProjetCarte.vcxproj.filters
+++ b/ProjetCarte/ProjetCarte/ProjetCarte.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClInclude Include="Player.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="Row.h">
+    <ClInclude Include="Game_Board.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
@@ -50,7 +50,7 @@
     <ClCompile Include="Player.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="Row.cpp">
+    <ClCompile Include="Game_Board.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
