--- a/ProjetCarte/ProjetCarte/ProjetCarte.vcxproj
+++ b/ProjetCarte/ProjetCarte/ProjetCarte.vcxproj
@@ -159,7 +159,7 @@
     <ClCompile Include="Deck.cpp" />
     <ClCompile Include="Game_Board.cpp" />
     <ClCompile Include="Player.cpp" />
-    <ClCompile Include="ProjetCarte.cpp" />
+    <ClCompile Include="Projet_Carte.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
