--- a/ProjetCarte/ProjetCarte/ProjetCarte.vcxproj.filters
+++ b/ProjetCarte/ProjetCarte/ProjetCarte.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Game_Board.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="Turn.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -51,6 +54,9 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="Projet_Carte.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Turn.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
